--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "Issuer": "VueCoreWebApiAuth",
+    "SignKey": "VueCoreWebApiAuthSignKey",
+    "ExpireMinutes": 1
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
